--- a/crewai_backend/requirements.txt
+++ b/crewai_backend/requirements.txt
@@ -1,8 +1,6 @@
 fastapi
 uvicorn[standard]
 pydantic
-crewai==0.28.8
-crewai-tools==0.1.6
-langchain==0.1.20
-langchain-openai==0.1.7
-langchain-community==0.0.38
+langchain-ollama==0.1.3
+langchain-openai==0.1.25
+requests
